fix: Update server listen address and adjust search loading message styling

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
       <!-- 🧠 حقل البحث بالذكاء الاصطناعي -->
       <div class="search-container">
         <input type="text" id="search-input" placeholder="ابحث باستخدام الذكاء الاصطناعي..." />
-        <p id="search-loading" class="text-primary hidden">🔍 جارٍ استخدام الذكاء الاصطناعي للبحث...</p>
+        <p id="search-loading" class="text-primary hidden  my-4">🔍 جارٍ استخدام الذكاء الاصطناعي للبحث...</p>
       </div>
 
       <!-- قائمة المشاريع -->
